# 2---lab1

./: CMakeLists.txt
examples/: test_app.cpp
include/currency/: Currency.h  Currency.h.bak  Platform.h  Stocks.h
src/common/: Currency.cpp  Currency.cpp.bak  Stocks.cpp
src/platform/windows/: Platform.cpp
